Remove clients from matrix, add ref to supported clients matrix.

--- a/modules/client-configuration/pages/client-config-overview.adoc
+++ b/modules/client-configuration/pages/client-config-overview.adoc
@@ -5,7 +5,10 @@ Registering clients is the first step after installing {productname}, and most o
 
 {productname} is compatible with a range of client technologies: you can install traditional or Salt clients, running {sle} or another Linux operating system, with a range of hardware options.
 
+For a complete list of supported clients, see xref:installation:client-requirements.adoc[].
+
 This guide discusses how to register and configure different clients, both manually and automatically.
+
 
 
 == Compare Traditional and Salt Clients
@@ -35,8 +38,6 @@ The icons in this table indicate:
 | Virtual Guest Installation |  | icon:check[role="green"]  | icon:question[role="gray"]
 | System Redeployment | With Auto-installation | icon:check[role="green"] | icon:question[role="gray"]
 | Contact Methods | Between server and client | osad, rhnsd, ssh push | zeromq (Salt default), salt-ssh
-| Red Hat Clients     |         | icon:check[role="green"]  | icon:check[role="green"]
-| Ubuntu Clients      |         | icon:times[role="danger"] | icon:check[role="green"]
 | SUSE Manager Proxy  |         | icon:check[role="green"]  | icon:check[role="green"]
 | Action Chains       |         | icon:check[role="green"]  | icon:check[role="green"]
 | Software Crash Reporting |    | icon:check[role="green"]  | icon:times[role="danger"]
