--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -154,14 +154,12 @@ salt <branch_server_salt_id> state.apply image-sync
 . The image details will be transferred to [path]``/srv/saltboot`` on the branch server.
 
 
-[[retail-install-setup-11sp4terminals]]
-== Terminals based on {slsa}{nbsp}11 SP4
-
-
-POS Terminals based on {sls}{nbsp}11 SP{nbsp}4 can be deployed in much the same way as other terminals, with a few differences.
+== Terminals based on {slsa}{nbsp}11 SP{nbsp}3
+ 
+POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
 
 * You must use the {slsa}{nbsp}11 template
-* {slsa}{nbsp}11 images need to be activated with the [systemitem]``SLES11 SP4 i586`` and [systemitem]``SLEPOS 11 SP4 i586`` channels
+* * {slsa}{nbsp}11 images need to be activated with the [systemitem]``SLES11 SP3 i586`` and [systemitem]``SLEPOS 11 SP3 i586`` channels
 
 [IMPORTANT]
 ====
@@ -169,17 +167,9 @@ Ensure that {slsa}{nbsp}11 images are built on the {slsa}{nbsp}11 build host, an
 Building on the incorrect build host will cause your build to fail.
 ====
 
-
 [WARNING]
 ====
 If you are building images for {slsa}{nbsp}11 using profiles from an HTTPS git repository that uses TLS 1.0 or greater, it will fail.
 {slsa}{nbsp}11 does not support later versions of TLS.
 You will need to clone the repository locally in order to use it for building.
 ====
-
-
-
-[[retail-install-setup-11sp3terminals]]
-== Terminals based on {slsa}{nbsp}11 SP3
-
-POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 should be updated to {sls}{nbsp}11 SP{nbsp}4 as soon as possible to get support for a longer time frame.
