--- a/modules/retail/pages/retail-install-packages.adoc
+++ b/modules/retail/pages/retail-install-packages.adoc
@@ -7,7 +7,7 @@ If you have chosen not to use the Unified Installer, you can install {smr} manua
 
 == Install the {susemgr} server
 
-For instructions to install {susemgr}, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/installation/install-intro.html.
+For instructions to install {susemgr}, see xref:installation:install-intro.adoc[].
 
 [WARNING]
 .Do Not Enable PXE Boot
