--- a/modules/retail/pages/retail-install-packages.adoc
+++ b/modules/retail/pages/retail-install-packages.adoc
@@ -22,7 +22,7 @@ This functionality will be installed later, after the initial setup.
 == Configure the {susemgr} server
 
 It is important that all required SUSE channels are available on your system and synchronized in order for {smr} to operate correctly.
-For more information on channel management, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/administration/channel-management.html.
+For more information on channel management, see xref:administration:channel-management.adoc[].
 
 // FIXME: check this listing. 2019-06-19, ke
 Channels required for {smr} functionality:
