--- a/modules/retail/pages/retail-install-packages.adoc
+++ b/modules/retail/pages/retail-install-packages.adoc
@@ -43,7 +43,7 @@ Channels required for {smr} functionality:
 
 After you have synchronized the required SUSE channels, create channels for any custom software.
 Channels are used to provide custom software for OS image building.
-For more information on software channels, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/reference/software/software-menu.html.
+For more information on software channels, see xref:reference:software/software-menu.adoc[].
 
 
 
