--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -45,7 +45,7 @@ If there are duplicate MAC addresses, importing the YAML file will fail.
 [NOTE]
 ====
 {slepos} images will not be migrated. You must rebuild the images using the OS image building functionality.
-For more information about building images, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/administration/image-management.html.
+For more information about building images, see xref:administration:image-management.adoc[].
 ====
 
 . Import the complete data (YAML) with:
