--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -73,7 +73,7 @@ In this procedure, you migrate the SLEPOS infrastructure and the branches one by
 
 . Install a {susemgr} server {productnumber} (with the Retail pattern).
 // FIXME: update this URL when 4.0 is released
-For more information, see https://www.suse.com/documentation/suse-manager-for-retail-3-2/retail-getting-started/retail.chap.install.html.
+For more information, see xref:retail:retail-install.adoc[].
 
 . On every branch server:
 +
