Fix some references to 3.2 (and even 3.1) to point to 4.0

--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -19,8 +19,8 @@ Each procedure is detailed in this section.
 
 == Install the build host and register it to {susemgr}
 
-Your build host should be a Salt minion, running {sls}{nbsp}12 SP3.
-For instructions to install Salt minion see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-getting-started/html/book.suma.getting-started/preparing.and.registering.clients.html
+Your build host should be a Salt minion, running {sls}{nbsp}12 SP4.
+For instructions to install Salt minion see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/client-configuration/client-config-overview.html
 
 [WARNING]
 ====
@@ -50,7 +50,7 @@ Check that the build host has these packages installed after you have run Highst
 - kiwi
 - kiwi-desc-saltboot
 
-If any package is missing, make sure the ``SUSE Manager 3.2 Tools`` repository is available on the build host and install any missing packages manually using ``zypper install``.
+If any package is missing, make sure the ``SUSE Manager 4.0 Tools`` repository is available on the build host and install any missing packages manually using ``zypper install``.
 ====
 
 
@@ -68,23 +68,24 @@ Additionally, you will need to create a system group for each branch server, and
 You can create system groups using the {susemgr} {webui}.
 Navigate to menu:Systems[System Groups] and click on btn:[Create System Group].
 
-For more information about system groups, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-reference/html/book.suma.reference.manual/ref.webui.systems.systems.html#ref.webui.systems.systemgroups
+For more information about system groups, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/reference/systems/system-groups.html
 
 
 [[retail.sect.install.branch]]
 == Install the branch server and register it to {susemgr}
 
-Your branch server should be installed as a default Salt-based client ("minion"), running {susemgrproxy} 3.2.
+Your branch server should be installed as a default Salt-based client ("minion"), running {susemgrproxy} 4.0.
 
 [WARNING]
 ====
 Do not install the branch server as a traditionally managed client.
 ====
 
-For instructions to install Salt-based proxy minions and register them to {susemgr}, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-advanced-topics/html/book.suma.advanced.topics/advanced.topics.proxy.quickstart.html
+For instructions to install Salt-based proxy minions and register them to {susemgr}, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/installation/install-proxy-unified.html
 
 The activation key should have the following channels:
 
+// FIXME This is outdated, replace with channels for SuMa 4.0
 ----
 - SLES 12 SP3 (SP4 in the future) as a base
   - SLES Pool
@@ -151,6 +152,7 @@ salt <branch_server_salt_id> state.apply image-sync
 
 
 == Terminals based on {slsa}{nbsp}11 SP{nbsp}3
+// FIXME Is SLES11 SP3 still the right version?
 
 POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
 
