--- a/modules/upgrade/pages/sp-migration.adoc
+++ b/modules/upgrade/pages/sp-migration.adoc
@@ -4,9 +4,10 @@
 
 
 
-SUSE Manager uses {sls} 12 as its underlying operating system.
-Therefore Service Pack migration (for example, from version 12 SP1 to 12 SP3) may be performed in the same way as a typical {slsa} migration.
+SUSE Manager uses {sls} 15 SP1 as its underlying operating system.
+Therefore Service Pack migration (for example, from version 15 SP1 to 15 SP2) may be performed in the same way as a typical {slsa} migration.
 
+// FIXME Is PostgreSQL 9.6 still the right version? Certainly SLES12 SP3 is not
 .Upgrading PostgreSQL to Version 9.6 Before Migrating to SLES12 SP3 or Later
 [WARNING]
 ====
