Do not show TODO

--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -5,7 +5,7 @@
 
 
 
-TODO:: Explain why repository metadata should/would be signed.
+//TODO:: Explain why repository metadata should/would be signed.
 
 You will require a custom GPG key to be able to sign repository metadata.
 
