--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -83,7 +83,7 @@ To prepare the target machine (with the example host name ``suma40``) proceed as
 .Procedure: Setup Target Machine
 . On the target machine, install "`{productname}`" Server 4.0 with the Unified Installer ({sle} 15 SP1).
 For more information about installing {productname}, see <<install-server-unified>>.
-. Run [command]``yast2 susemanagersetup`` to set up {productname}.
+. Run [command]``yast2 susemanager_setup`` to set up {productname}.
 . On the first {productname} setup screen, ensure that [guimenu]``Migrate a SUSE Manager compatible server`` is marked instead of [guimenu]``Set up SUSE Manager from scratch``.
 . On the second screen, enter the name of the source system as [guimenu]``Hostname of source SUSE Manager Server`` as well as the domain name.
 Enter the database credentials of the source system.
