Add Tuning info about changelog metadata storage.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -35,6 +35,7 @@ ifndef::backend-pdf[]
 ** Tuning
 *** xref:tuning-apachetomcat.adoc[Tuning Apache and Tomcat]
 *** xref:tuning-largedeploys.adoc[Tuning Large Deployments]
+*** xref:tuning-changelogmetadata.adoc[Tuning Changelog Metadata]
 ** Maintenance Window
 *** xref:content-lifecycle.adoc[Content Lifecycle Management]
 // Troubleshooting
@@ -48,8 +49,6 @@ ifndef::backend-pdf[]
 *** xref:tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
 *** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
 // Appendices
-// Commenting this out until we find the right place to put it. LKB 2019-03-21
-// Including it again; it's an important bit of info. ke 2019-05-09
 ** xref:autoyast-example.adoc[AutoYaST Example]
 // License
 //** xref:common_gfdl1.2_i.adoc[License]
@@ -117,6 +116,8 @@ include::modules/administration/pages/tuning-apachetomcat.adoc[leveloffset=+1]
 
 include::modules/administration/pages/tuning-largedeploys.adoc[leveloffset=+1]
 
+include::modules/administration/pages/tuning-changelogmetadata.adoc[leveloffset=+1]
+
 // Maintenance Window
 include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+2]
 
@@ -142,7 +143,6 @@ include::modules/administration/pages/tshoot-rpctimeout.adoc[leveloffset=+2]
 include::modules/administration/pages/tshoot-saltboot.adoc[leveloffset=+2]
 
 // Appendices
-// Commenting this out until we find the right place to put it. LKB 2019-03-21
-// include::modules/administration/pages/autoyast-example.adoc[leveloffset=+1]
+include::modules/administration/pages/autoyast-example.adoc[leveloffset=+1]
 
 endif::[]
