--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -20,7 +20,7 @@ Each procedure is detailed in this section.
 == Install the build host and register it to {susemgr}
 
 Your build host should be a Salt minion, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
-For instructions to install Salt minion, see xref:client-configuration:manual-registration-overview.adoc[]..
+For instructions to install Salt minion, see xref:client-configuration:manual-registration-overview.adoc[].
 
 [WARNING]
 ====
