--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -68,7 +68,7 @@ Additionally, you will need to create a system group for each branch server, and
 You can create system groups using the {susemgr} {webui}.
 Navigate to menu:Systems[System Groups] and click on btn:[Create System Group].
 
-For more information about system groups, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/reference/systems/system-groups.html.
+For more information about system groups, see xref:reference:systems/system-groups.adoc[].
 
 
 
