--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -85,7 +85,7 @@ Do not install the branch server as a traditionally managed client.
 
 // Wondering whether that's actually meant...
 // ke, 2019-06-19
-For instructions to install Salt-based proxy minions and register them to {susemgr}, see https://www.suse.com/documentation/suse-manager-4/4.0/suse-manager/installation/install-proxy-unified.html.
+For instructions to install Salt-based proxy minions and register them to {susemgr}, see xref:installation:install-proxy-unified.adoc[].
 
 The activation key should have the following channels:
 
