adjust version numbers (#547)
* adjust version numbers
close https://github.com/SUSE/spacewalk/issues/7810
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/retail/pages/retail-next.adoc
+++ b/modules/retail/pages/retail-next.adoc
@@ -17,9 +17,9 @@ If you need further information or support, try one of these options.
 [[retail.sect.next.docs]]
 === More documentation
 
-For {susemgr} documentation, visit https://www.suse.com/documentation/suse-manager-3/
+For {susemgr} documentation, visit https://www.suse.com/documentation/suse-manager-4/
 
-For legacy {slepos} documentation, visit https://www.suse.com/documentation/slepos11/index.html
+For legacy {slepos} or {smr} documentation, see https://www.suse.com/documentation/slepos11/index.html or https://www.suse.com/documentation/suse-manager-for-retail.
 Note, however, that {smr} documentation supersedes this information.
 
 
