--- a/modules/retail/pages/retail-requirements.adoc
+++ b/modules/retail/pages/retail-requirements.adoc
@@ -14,7 +14,7 @@ endif::[]
 Before you install {smr}, ensure your environment meets the minimum requirements.
 This section lists the requirements for your {smr} installation.
 These requirements are in addition to the {susemgr} requirements listed at
-https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-getting-started/html/book.suma.getting-started/quickstart.chapt.overview.requirements.html#quickstart.sect.prereq
+xref:installation:general-requirements.adoc[].
 
 [IMPORTANT]
 ====
