--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -19,8 +19,8 @@ Each procedure is detailed in this section.
 
 == Install the build host and register it to {susemgr}
 
-Your build host should be a Salt minion, running {sls}{nbsp}12 SP3.
-For instructions to install Salt minion see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-getting-started/html/book.suma.getting-started/preparing.and.registering.clients.html
+Your build host should be a Salt minion, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
+For instructions to install Salt minion, see xref:client-configuration:manual-registration-overview.adoc[].
 
 [WARNING]
 ====
@@ -68,23 +68,28 @@ Additionally, you will need to create a system group for each branch server, and
 You can create system groups using the {susemgr} {webui}.
 Navigate to menu:Systems[System Groups] and click on btn:[Create System Group].
 
-For more information about system groups, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-reference/html/book.suma.reference.manual/ref.webui.systems.systems.html#ref.webui.systems.systemgroups
+For more information about system groups, see xref:reference:systems/system-groups.adoc[].
+
 
 
 [[retail.sect.install.branch]]
 == Install the branch server and register it to {susemgr}
 
-Your branch server should be installed as a default Salt-based client ("minion"), running {susemgrproxy} 3.2.
+Your branch server should be installed as a default Salt-based client ("minion"), running {susemgrproxy} 4.0.
+With a limited feature set, {susemgrproxy} 3.2 is also possible.
 
 [WARNING]
 ====
 Do not install the branch server as a traditionally managed client.
 ====
 
-For instructions to install Salt-based proxy minions and register them to {susemgr}, see https://www.suse.com/documentation/suse-manager-3/3.2/susemanager-advanced-topics/html/book.suma.advanced.topics/advanced.topics.proxy.quickstart.html
+// Wondering whether that's actually meant...
+// ke, 2019-06-19
+For instructions to install Salt-based proxy minions and register them to {susemgr}, see xref:installation:install-proxy-unified.adoc[].
 
 The activation key should have the following channels:
 
+// FIXME: check this listing. 2019-06-19, ke
 ----
 - SLES 12 SP3 (SP4 in the future) as a base
   - SLES Pool
@@ -149,13 +154,12 @@ salt <branch_server_salt_id> state.apply image-sync
 . The image details will be transferred to [path]``/srv/saltboot`` on the branch server.
 
 
-
 == Terminals based on {slsa}{nbsp}11 SP{nbsp}3
-
+ 
 POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
 
 * You must use the {slsa}{nbsp}11 template
-* {slsa}{nbsp}11 images need to be activated with the [systemitem]``SLES11 SP3 i586`` and [systemitem]``SLEPOS 11 SP3 i586`` channels
+* * {slsa}{nbsp}11 images need to be activated with the [systemitem]``SLES11 SP3 i586`` and [systemitem]``SLEPOS 11 SP3 i586`` channels
 
 [IMPORTANT]
 ====
