--- a/modules/retail/pages/retail-introduction.adoc
+++ b/modules/retail/pages/retail-introduction.adoc
@@ -28,9 +28,11 @@ Migrating configuration from {slepos} to {smr} is a technology preview and will 
 == About this book
 
 This document provides an overview of {smr}, and guides you through initial installation and setup.
-It should be read in conjunction with the {susemgr} documentation suite, available from https://www.suse.com/documentation/suse-manager-3/
+It should be read in conjunction with the {susemgr} documentation suite, available from https://www.suse.com/documentation/suse-manager.
 
-For more information about managing your {smr} environment, or to find out where to get help, see https://www.suse.com/documentation/suse-manager-for-retail-3-2/retail-getting-started/retail.chap.next.html
+// FIXME: Update this URL when we are about to the 4.0 retail documentation
+// ke, 2019-06-19
+For more information about managing your {smr} environment, or to find out where to get help, see xref:retail:retail-next.adoc[].
 
 ////
 [[retail.sect.intro.architecture]]
