starting with https://github.com/SUSE/spacewalk/issues/8149

--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -288,7 +288,7 @@ However, it is possible to clone systems and register them successfully by delet
 .Procedure: Registering Cloned Systems
 . Clone the system using your preferred hypervisor's cloning mechanism.
 . On the cloned system, change the hostname and IP addresses, and check the [path]``/etc/hosts`` file to ensure you have the right host entries.
-. Stop the [command]``rhnsd`` daemon with [command]``/etc/init.d/rhnsd stop`` or [command]``rcosad stop``.
+. Stop the [command]``rhnsd`` daemon with [command]``/etc/init.d/rhnsd stop`` or on newer systemd-based systems, with [command]``systemctl stop rhnsd.service``. Then [command]``rcosad stop``.
 . For {slsa} 11 or {rhel} 5 or 6 clients, run these commands:
 +
 ----
