--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -337,7 +337,7 @@ Salt 2019.2.0 or later is required on the virtual host in order for the salt-bas
 
 
 Once the registration process is finished and all packages have been installed, enable [daemon]``osad`` (open source architecture daemon).
-On a {sls} system this can be achieved by running the following commands as user {rootuser}:
+On {sls} 12 systems and later this can be achieved by running the following commands as user {rootuser}:
 
 
 ----
