--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -64,16 +64,16 @@ Each minion will now have a different [path]``/etc/machine-id`` and should now b
 .Procedure: Resolving Duplicate Machine IDs in Cloned Traditional Clients
 
 . On the cloned machine, change the hostname and IP addresses, and make sure [path]``/etc/hosts`` contains the changes you made and the correct host entries.
-. Stop rhnsd daemon with:
+. Stop rhnsd daemon, on {rhnminrelease6} and {sle} 11 with:
 +
 ----
 # /etc/init.d/rhnsd stop
 ----
 +
-or:
+or, on newer systemd-based systems, with:
 +
 ----
-# rcrhnsd stop
+# systemctl stop rhnsd.service
 ----
 . Stop osad with:
 +
