--- a/modules/architecture/pages/rhnsd.adoc
+++ b/modules/architecture/pages/rhnsd.adoc
@@ -1,16 +1,16 @@
 [[arch.component.rhnsd]]
 = rhnsd
 
-
-
+*rhnsd* is a client-side daemon for traditionally managed clients only.
+It is now (June 2019) only used on non-systemd systems ({sle} 11 and {rhnminrelease6}); on later systems, a systemd timer ([systemitem]``rhnsd.timer``) is used.
 
 
 
 == Functions
 *rhnsd* is a primary component of {productname}. It performs the following functions in the stack.
 
-* **Client-side daemon for legacy clients**
-* **Periodically calls mgr_check(symlinked to rhn_check)**
+* **Client-side daemon for traditionally managed clients**
+* **Periodically calls mgr_check (symlinked to rhn_check)**
 * **Randomizes check time not to overload the server**
 
 
