--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -73,7 +73,7 @@ Each minion will now have a different [path]``/etc/machine-id`` and should now b
 or, on newer systemd-based systems, with:
 +
 ----
-# systemctl stop rhnsd.service
+# service rhnsd stop
 ----
 . Stop osad with:
 +
