--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -288,7 +288,8 @@ However, it is possible to clone systems and register them successfully by delet
 .Procedure: Registering Cloned Systems
 . Clone the system using your preferred hypervisor's cloning mechanism.
 . On the cloned system, change the hostname and IP addresses, and check the [path]``/etc/hosts`` file to ensure you have the right host entries.
-. Stop the [command]``rhnsd`` daemon with [command]``/etc/init.d/rhnsd stop`` or on newer systemd-based systems, with [command]``systemctl stop rhnsd.service``. Then [command]``rcosad stop``.
+. On traditionally managed clients, stop the [command]``rhnsd`` daemon with [command]``/etc/init.d/rhnsd stop`` or, on newer systemd-based systems, with [command]``service rhnsd stop``.
+Then [command]``service osad stop``.
 . For {slsa} 11 or {rhel} 5 or 6 clients, run these commands:
 +
 ----
@@ -312,7 +313,7 @@ However, it is possible to clone systems and register them successfully by delet
 # rm -rf /var/cache/salt
 ----
 +
-. If you are using a traditional registered system, clean up the working files with this command:
+. If you are using a traditionally managed client, clean up the working files with this command:
 +
 ----
 # rm -f /etc/sysconfig/rhn/{osad-auth.conf,systemid}
