--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -55,7 +55,7 @@ ones
 . Delete accepted keys from the Onboarding page and the system profile from {productname}, and restart the minion with:
 +
 ----
-# systemctl restart salt-minion
+# service salt-minion restart
 ----
 . Re-register the clients.
 Each minion will now have a different [path]``/etc/machine-id`` and should now be correctly displayed on the System Overview page.
