--- a/modules/architecture/pages/traditional-osad.adoc
+++ b/modules/architecture/pages/traditional-osad.adoc
@@ -5,7 +5,7 @@
 
 
 
-
+// FIXME: check whether the same applies for the timer
 OSAD is an alternative contact method between {productname} and its clients.
 By default, {productname} uses [systemitem]``rhnsd``, which contacts the server every four hours to execute scheduled actions.
 OSAD allows registered client systems to execute scheduled actions immediately.
