more rhnsd adjustments; do not mention it if it could be misleading info

--- a/modules/reference/pages/patches/applying-patches.adoc
+++ b/modules/reference/pages/patches/applying-patches.adoc
@@ -19,8 +19,8 @@ In addition, users with appropriate roles can apply patches using two other meth
 
 [IMPORTANT]
 ====
-If you use scheduled package installation, the packages or patches are installed via the {productname} daemon ([command]``rhnsd``). You must enable the {productname} daemon on your systems.
-For more information about the {productname} daemon, see xref:client-configuration:contact-methods.adoc[].
+If you use scheduled package installation, the packages or patches are installed via the configured contact method.
+For more information, see xref:client-configuration:contact-methods.adoc[].
 ====
 
 
