--- a/modules/reference/pages/systems/system-details/sd-packages.adoc
+++ b/modules/reference/pages/systems/system-details/sd-packages.adoc
@@ -16,7 +16,7 @@ When new packages or updates are installed on the client via {productname}, any 
 Packages::
 The default display of the [guimenu]``Packages`` tab describes the options available and provides the means to update your package list.
 To update or complete a potentially outdated list, possibly because of the manual installation of packages, click the btn:[Update Package List] button in the bottom right-hand corner of this page.
-The next time the {productname} daemon ([systemitem]``rhnsd``) connects to {productname}, it updates your system profile with the latest list of installed packages.
+The next time the system connects to {productname}, it updates your system profile with the latest list of installed packages.
 
 List / Remove::
 Lists installed packages and enables you to remove them.
