--- a/modules/reference/pages/systems/system-details/sd-hardware.adoc
+++ b/modules/reference/pages/systems/system-details/sd-hardware.adoc
@@ -6,4 +6,4 @@ This subtab provides information about the system, such as networking, BIOS, mem
 This feature only works if you have included the hardware profile during registration.
 
 If the hardware profile looks incomplete or outdated, click the btn:[Schedule Hardware Refresh] button.
-The next time the {productname} Daemon ([systemitem]``rhnsd``) connects to {productname}, it will update your system profile with the latest hardware information.
+The next time the system connects to {productname}, it will update your system profile with the latest hardware information.
