--- a/modules/retail/nav-retail.adoc
+++ b/modules/retail/nav-retail.adoc
@@ -25,6 +25,7 @@ ifndef::backend-pdf[]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-terminal-names.adoc[Terminal Names]
 *** xref:retail-mass-config.adoc[Mass Configuration]
+*** xref:retail-offline.adoc[Offline Use]
 // Retail Upgrade
 ** xref:retail-migration-intro.adoc[Retail Upgrade]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
