Remove fixed known issues, remove TBD email, add report issue.

--- a/modules/ROOT/pages/release-notes-version-4.0.adoc
+++ b/modules/ROOT/pages/release-notes-version-4.0.adoc
@@ -140,23 +140,12 @@ There are far too many changes to include in the following list but these suffic
 
 === Known Issues
 
-==== Cross references
-
-Cross references between docs are not currently working as expected, as a result of the conversion process.
-During the *RC*, the correct references will be added and these will begin to work correctly.
-
-
-==== Missing Content
-
-You might notice some placeholder text or blank pages in some sections.
-This is either content that we have not yet written, or content that has not yet been moved from its old home.
-These will be corrected before *GM*.
 
 ==== Images
 
 Some images might be missing, or might fail to load.
 This is either because we need to take new screenshots, develop new graphics, or content that has not yet been moved from its old home.
-These will be corrected before *GM*.
+These will be corrected in a minor release.
 
 
 == Beta 2 Changes
@@ -169,8 +158,7 @@ In this release, we have reorganized our documentation and updated our tooling t
 
 Please keep the feedback coming!
 In this new layout, you can propose changes directly by clicking the btn:[Edit this Page] button.
-Otherwise, you can always email us at TBD@suse.de
-TODO:: check email address
+You can also report an issue by clicking [guimenu]``Report  Issue`` in the [guimenu]``Resources`` menu.  
 
 
 [WARNING]
