Added branch server instructions, yast setup, general edits.

--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -20,7 +20,7 @@ Each procedure is detailed in this section.
 == Install the build host and register it to {susemgr}
 
 Your build host should be a Salt minion, running {sls}{nbsp}12 SP3 or SP4 for building {sls} 12 images (SP4 recommended).
-For instructions to install Salt minion, see xref:client-configuration:manual-registration-overview.adoc[].
+For instructions to install Salt minions, see xref:client-configuration:manual-registration-overview.adoc[].
 
 [WARNING]
 ====
@@ -75,7 +75,7 @@ For more information about system groups, see xref:reference:systems/system-grou
 [[retail.sect.install.branch]]
 == Install the branch server and register it to {susemgr}
 
-Your branch server should be installed as a default Salt-based client ("minion"), running {susemgrproxy} 4.0.
+Your branch server should be a Salt minion, running {susemgrproxy} 4.0.
 With a limited feature set, {susemgrproxy} 3.2 is also possible.
 
 [WARNING]
@@ -155,7 +155,7 @@ salt <branch_server_salt_id> state.apply image-sync
 
 
 == Terminals based on {slsa}{nbsp}11 SP{nbsp}3
- 
+
 POS Terminals based on {sls}{nbsp}11 SP{nbsp}3 can be deployed in much the same way as other terminals, with a few differences.
 
 * You must use the {slsa}{nbsp}11 template
