--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -313,7 +313,7 @@ Then [command]``service osad stop``.
 # rm -rf /var/cache/salt
 ----
 +
-. If you are using a traditionally managed client, clean up the working files with this command:
+. If you are using a traditional client, clean up the working files with this command:
 +
 ----
 # rm -f /etc/sysconfig/rhn/{osad-auth.conf,systemid}
