--- a/modules/architecture/pages/rhnsd.adoc
+++ b/modules/architecture/pages/rhnsd.adoc
@@ -1,7 +1,7 @@
 [[arch.component.rhnsd]]
 = rhnsd
 
-*rhnsd* is a client-side daemon for traditionally managed clients only.
+*rhnsd* is a client-side daemon for traditional clients only.
 It is now (June 2019) only used on non-systemd systems ({sle} 11 and {rhnminrelease6}); on later systems, a systemd timer ([systemitem]``rhnsd.timer``) is used.
 
 
