--- a/modules/architecture/pages/rhnsd.adoc
+++ b/modules/architecture/pages/rhnsd.adoc
@@ -2,7 +2,8 @@
 = rhnsd
 
 *rhnsd* is a client-side daemon for traditional clients only.
-It is now (June 2019) only used on non-systemd systems ({sle} 11 and {rhnminrelease6}); on later systems, a systemd timer ([systemitem]``rhnsd.timer``) is used.
+As of {productname} 4, it is only available on non-systemd systems ({sle} 11 and {rhnminrelease6}).
+For later versions, a systemd timer ([systemitem]``rhnsd.timer``) is available.
 
 
 
