--- a/modules/architecture/pages/rhnsd.adoc
+++ b/modules/architecture/pages/rhnsd.adoc
@@ -10,7 +10,7 @@ For later versions, a systemd timer ([systemitem]``rhnsd.timer``) is available.
 == Functions
 *rhnsd* is a primary component of {productname}. It performs the following functions in the stack.
 
-* **Client-side daemon for traditionally managed clients**
+* **Client-side daemon for traditional clients**
 * **Periodically calls mgr_check (symlinked to rhn_check)**
 * **Randomizes check time not to overload the server**
 
