--- a/modules/reference/pages/systems/systems-list.adoc
+++ b/modules/reference/pages/systems/systems-list.adoc
@@ -129,7 +129,7 @@ The reason may be one of the following:
 
 * The system is not entitled to any {productname} service.
 System profiles that remain unentitled for 180 days (6 months) are removed.
-* The system is entitled, but [systemitem]``rhnsd`` has been disabled on the traditionally managed system.
+* The system is entitled, but [systemitem]``rhnsd`` has been disabled on the traditional client.
 For more on restarting and troubleshooting, see xref:client-configuration:contact-methods.adoc[].
 * The system is behind a firewall that does not allow connections over [systemitem]``https`` (port 443).
 * The system is behind an HTTP proxy server that has not been properly configured.
