--- a/modules/architecture/pages/traditional-rhnsd.adoc
+++ b/modules/architecture/pages/traditional-rhnsd.adoc
@@ -4,7 +4,7 @@
 For background information, see xref:architecture:rhnsd.adoc[].
 *rhnsd* is used non-systemd systems; on later systems, a systemd timer ([systemitem]``rhnsd.timer``) is used.
 
-The daemon is NOT started by "rhnsd.service", but by /etc/init.d/rhnsd
+The daemon is started by /etc/init.d/rhnsd, it does not use rhnsd.service. 
 
 
 
