more rhnsd adjustments

--- a/modules/architecture/pages/traditional-rhnsd.adoc
+++ b/modules/architecture/pages/traditional-rhnsd.adoc
@@ -65,5 +65,5 @@ The minimum allowed time interval is one hour (60 minutes). If you set the inte
 
 As the {ruser} you may view the status of rhnsd by typing the command:
 ----
-/etc/init.d/rhnsd restart status
+/etc/init.d/rhnsd status
 ----
