add note on keeping rhnsd running together with OSAD

--- a/modules/client-configuration/pages/contact-methods.adoc
+++ b/modules/client-configuration/pages/contact-methods.adoc
@@ -415,6 +415,13 @@ OSAD is an alternative contact method between {productname} and its clients.
 By default, {productname} uses [systemitem]``rhnsd``, which contacts the server every four hours to execute scheduled actions.
 OSAD allows registered client systems to execute scheduled actions immediately.
 
+.Keep [systemitem]``rhnsd`` Running
+[NOTE]
+====
+Use OSAD only in addition to [systemitem]``rhnsd``.
+If you disable [systemitem]``rhnsd`` your client will be shown as not checking in after 24 hours.
+====
+
 OSAD has several distinct components:
 
 * The [systemitem]``osa-dispatcher`` service runs on the server, and uses database checks  to determine if clients need to be pinged, or if actions need to be executed.
