rhn_check -> mgr_check https://github.com/SUSE/spacewalk/issues/8214

--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -399,7 +399,7 @@ In case an installation has failed, you can btn:[Reschedule] it from this page o
 You do not have to configure the installation again.
 
 If the event log does not contain enough information to locate a problem, log in to the {vmhost} console and read the log file for your package manager.
-If you are using the [daemon]``rhnsd``, you may alternatively immediately trigger any scheduled actions by calling [command]``rhn_check`` on the {vmhost}.
+If you are using the [daemon]``rhnsd``, you may alternatively immediately trigger any scheduled actions by calling [command]``mgr_check`` on the {vmhost}.
 Increase the command's verbosity by using the options [option]``-v``, [option]``-vv``, or [option]``-vvv``, respectively.
 ====
 
