--- a/modules/architecture/pages/salt-ssh-push.adoc
+++ b/modules/architecture/pages/salt-ssh-push.adoc
@@ -84,7 +84,7 @@ There are two kinds of parameters for Push via Salt SSH:
 
 The Push via Salt SSH feature uses a taskomatic job to execute scheduled actions using [command]``salt-ssh``.
 The taskomatic job periodically checks for scheduled actions and executes them.
-While on traditional clients with SSH push configured only [command]``rhn_check`` is executed via SSH, the Salt SSH push job executes a complete [command]``salt-ssh`` call based on the scheduled action.
+While on traditional clients with SSH push configured only [command]``mgr_check`` is executed via SSH, the Salt SSH push job executes a complete [command]``salt-ssh`` call based on the scheduled action.
 
 
 
