--- a/modules/client-configuration/pages/contact-methods.adoc
+++ b/modules/client-configuration/pages/contact-methods.adoc
@@ -241,7 +241,7 @@ Registration is optional since it can also be done from within the client in thi
 
 
 When using the Push via SSH tunnel contact method, the client is configured to connect to  {productname} using the high ports mentioned above.
-Tools like [command]``rhn_check`` and [command]``zypper`` will need an active SSH session with the proper port forwarding options in order to access the {productname} API.
+Tools like [command]``mgr_check`` and [command]``zypper`` will need an active SSH session with the proper port forwarding options in order to access the {productname} API.
 To verify the Push via SSH tunnel connection manually, run the following command on the {productname} server:
 
 ----
