--- a/modules/reference/pages/admin/organizations.adoc
+++ b/modules/reference/pages/admin/organizations.adoc
@@ -102,7 +102,7 @@ stagingContentWindow=24
 It is the number of hours before the scheduled installation or update time.
 In this case, it means `24` hours before the installation time.
 The start time for download depends on the selected contact method for a system.
-The assigned contact method sets the time for when the next [command]``rhn_check`` will be executed.
+The assigned contact method sets the time for when the next [command]``mgr_check`` will be executed.
 
 Next time an action is scheduled, packages will automatically be downloaded but not installed yet.
 When the scheduled time comes, the action will use the staged version.
