--- a/modules/reference/pages/systems/system-details/sd-configuration.adoc
+++ b/modules/reference/pages/systems/system-details/sd-configuration.adoc
@@ -87,7 +87,7 @@ image::system_details_traditional_configuration_add_files_upload.png[scaledwidth
 
 Import Files::
 Via the [guimenu]``Import Files`` tab, you can add files from the system you have selected before and add it to the sandbox of this system.
-Files will be imported the next time [command]``rhn_check`` runs on the system.
+Files will be imported the next time [command]``mgr_check`` runs on the system.
 To deploy these files or override configuration files in global channels, copy this file into your local override channel after the import has occurred.
 
 In the text box under [guimenu]``Import New Files`` enter the full path of any files you want import into {productname} or select deployable configuration files from the [guimenu]``Import Existing Files`` list.
