Moved content lifecycle out of maint window, added new page.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -32,12 +32,14 @@ ifndef::backend-pdf[]
 ** xref:custom-ssl.adoc[Custom SSL Certificates]
 // Backing up
 ** xref:backup-restore.adoc[Backing Up and Restoring]
+// Content Lifecycle
+** xref:content-lifecycle.adoc[Content Lifecycle Management]
 ** Tuning
 *** xref:tuning-apachetomcat.adoc[Tuning Apache and Tomcat]
 *** xref:tuning-largedeploys.adoc[Tuning Large Deployments]
 *** xref:tuning-changelogmetadata.adoc[Tuning Changelog Metadata]
 ** Maintenance Window
-*** xref:content-lifecycle.adoc[Content Lifecycle Management]
+*** xref:maintenance-window.adoc[Maintenance Window]
 // Troubleshooting
 ** xref:tshoot-intro.adoc[Troubleshooting]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
@@ -111,6 +113,10 @@ include::modules/administration/pages/custom-ssl.adoc[leveloffset=+1]
 // Backing up
 include::modules/administration/pages/backup-restore.adoc[leveloffset=+1]
 
+// Content Lifecycle
+
+include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+1]
+
 // Tuning
 include::modules/administration/pages/tuning-apachetomcat.adoc[leveloffset=+1]
 
@@ -119,7 +125,7 @@ include::modules/administration/pages/tuning-largedeploys.adoc[leveloffset=+1]
 include::modules/administration/pages/tuning-changelogmetadata.adoc[leveloffset=+1]
 
 // Maintenance Window
-include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+2]
+include::modules/administration/pages/maintenance-window.adoc[leveloffset=+2]
 
 // Troubleshooting
 == Troubleshooting
